feat(shopping-list): read total amounts like "cevapi 3kg" from pasted lines
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>